fix visible toggler

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -27,6 +27,10 @@
   display: flex;
 }
 
+.header__logo_component {
+
+}
+
 .header__burger {
   margin-right: auto;
   display: none;
@@ -48,6 +52,10 @@
 
   .header__top {
     justify-content: center;
+  }
+
+  .header__logo_component {
+    display: none;
   }
 
   .header__logo {
